--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -10,7 +10,7 @@ platforms:
   - name: aws-cloudmap-test
     groups:
       - aws_cloudmap_group
-    image: ${MOLECULE_DISTRO:-debian:bookworm-slim}
+    image: ${MOLECULE_DISTRO:-debian:bullseye-slim}
     privileged: false
     capabilities:
       - SYS_ADMIN
