--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - pipenv sync
 env:
   jobs:
+    - MOLECULE_DISTRO=debian:bookworm-slim
     - MOLECULE_DISTRO=debian:buster-slim
     - MOLECULE_DISTRO=debian:bullseye-slim
 script:
