--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ env:
     - MOLECULE_DISTRO=debian:bookworm-slim
     - MOLECULE_DISTRO=debian:buster-slim
     - MOLECULE_DISTRO=debian:bullseye-slim
+    - MOLECULE_DISTRO=debian:stretch-slim
+    - MOLECULE_DISTRO=debian:jessie-slim
 script:
   - pipenv run molecule test --all
 
